frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: fe-deployment
  namespace: frontend-ns

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend-container
          image: acrlab123.azurecr.io/frontend:v1.0
          ports:
            - containerPort: 80
            
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
